fix jumpy graphs by adding bottom-spacer for tooltip
Added a transparent dummy element (#bottom-spacer) with a height of 500px at the bottom of the explore-multi-sk and report-page-sk pages. This ensures that the page height is always sufficient to accommodate large tooltips without triggering vertical scrollbars dynamically, which previously caused layout shifts (jumpy graphs) and made it difficult to interact with the tooltips.

Bug: 469293301
Reviewed-on: https://skia-review.googlesource.com/c/buildbot/+/1131436
Commit-Queue: Sergei Rudenkov <sergeirudenkov@google.com>

--- a/perf/modules/themes/themes.scss
+++ b/perf/modules/themes/themes.scss
@@ -9,3 +9,7 @@ body {
   margin: 0;
   padding: 0;
 }
+
+#bottom-spacer {
+  height: 500px;
+}
